novo campo de role em users e novo campo de descricao em posts